force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ChangeStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChangeStatus__c</fullName>
    <description>The po item change status</description>
    <inlineHelpText>The po item change status</inlineHelpText>
    <label>Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>