force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ContractItemName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContractItemName__c</fullName>
    <description>The name of the bundle or standalone product or service to be ordered</description>
    <inlineHelpText>The name of the bundle or standalone product or service to be ordered</inlineHelpText>
    <label>Contract Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>