force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContractNumber__c</fullName>
    <description>The Reference number of the contract associated with the purchase order</description>
    <externalId>true</externalId>
    <inlineHelpText>The Reference number of the contract associated with the purchase order</inlineHelpText>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>