force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__NetPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NetPrice__c</fullName>
    <description>Net price based on unit price and quantity for the PO line item</description>
    <inlineHelpText>Net price based on unit price and quantity for the PO line item</inlineHelpText>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>