force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__NextVersion__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NextVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the next version associated with the original purchase order item</description>
    <inlineHelpText>ID of the next version associated with the original purchase order item</inlineHelpText>
    <label>Next Version</label>
    <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
    <relationshipLabel>Previous</relationshipLabel>
    <relationshipName>Previous</relationshipName>
    <type>Lookup</type>
</CustomField>