force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__NumberOfWarnings__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__NumberOfWarnings__c</fullName>
    <description>The number of warnings associated with the po item</description>
    <inlineHelpText>The number of warnings associated with the po item</inlineHelpText>
    <label>Number Of Warnings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>