force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__OriginalPOLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OriginalPOLineNumber__c</fullName>
    <description>The line number of the associated original purchase order item</description>
    <externalId>true</externalId>
    <inlineHelpText>The PO line number that remains constant over the life cycle of the purchase order item across versions. During initial creation, Original PO line number is the same as PO line Number.</inlineHelpText>
    <label>Original PO Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>