force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ParentContractItemNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentContractItemNumber__c</fullName>
    <description>Represents the parent item number associated with the item when it is part of a solution bundle</description>
    <inlineHelpText>Represents the parent item number associated with the item when it is part of a solution bundle</inlineHelpText>
    <label>Parent Contract Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>