force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__PurchaseOrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PurchaseOrderId__c</fullName>
    <description>ID of the associated purchase order</description>
    <inlineHelpText>ID of the associated purchase order</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
    <relationshipLabel>Customer PO Items</relationshipLabel>
    <relationshipName>CustomerPOItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>