force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Quantity__c</fullName>
    <description>The Quantity authorized in the PO</description>
    <inlineHelpText>The Quantity authorized in the PO</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>