force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__QuoteNumber__c</fullName>
    <description>The Reference number of the quote associated with the purchase order</description>
    <inlineHelpText>The Reference number of the quote associated with the purchase order</inlineHelpText>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>