force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__ReferencePOLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ReferencePOLineNumber__c</fullName>
    <description>The Reference PO item number from the external system</description>
    <externalId>true</externalId>
    <inlineHelpText>The Reference PO item number from the external system</inlineHelpText>
    <label>Reference PO Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>