force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__SalesOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SalesOrderQuantity__c</fullName>
    <description>The Total quantity for which sales orders have already been created and confirmed against the purchase order item</description>
    <inlineHelpText>The Total quantity for which sales orders have already been created and confirmed against the purchase order item</inlineHelpText>
    <label>Sales Order Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>