force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_Config2__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StartDate__c</fullName>
    <description>The Expected start date of the subscription or service</description>
    <inlineHelpText>The Expected start date of the subscription or service</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>