force-app/main/default/objects/Apttus_Config2__CustomerPOItem__c/fields/Apttus_QPConfig__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal</description>
    <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Customer PO Items</relationshipLabel>
    <relationshipName>CustomerPOItems</relationshipName>
    <type>Lookup</type>
</CustomField>